<resources>
    <string name="hint">My number lower</string>
    <string name="hello">Hello!!!</string>
    <string name="attempts">Attempts left: 5</string>
    <string name="emptyField">Your field is empty</string>
    <string name="congrats">Congratulations! Your guess is right</string>
    <string name="greaterValue">The value is greater</string>
    <string name="lessValue">The value is less</string>
    <string name="noAttempts">You don\'t have attempts</string>
    <string name="tryButtonStr">Try it out</string>
    <string name="restartButtonStr">Restart</string>
    <string name="deleteStr">Delete</string>
    <string name="oneButtonStr">1</string>
    <string name="twoButtonStr">2</string>
    <string name="threeButtonStr">3</string>
    <string name="fourButtonStr">4</string>
    <string name="fiveButtonStr">5</string>
    <string name="sixButtonStr">6</string>
    <string name="sevenButtonStr">7</string>
    <string name="eightButtonStr">8</string>
    <string name="nineButtonStr">9</string>
    <string name="zeroButtonStr">0</string>
    <string name="change_difficulty">Change difficulty</string>
    <string name="hard">Hard</string>
    <string name="medium">Medium</string>
    <string name="easy">Easy</string>
    <string name="settings">Changing difficulty</string>
    <string name="diaps_array">Choose difficulty</string>
    <string name="ok">Ok</string>
    <string name="cancel">Cancel</string>
</resources>